--- a/products-web/src/main/resources/messages.properties
+++ b/products-web/src/main/resources/messages.properties
@@ -21,3 +21,6 @@ order-items-product.invalid=Selected product does not exist.
 order-items-quantity.empty=Field 'quantity' must be provided.
 order-items-quantity.min-value=Value of the field 'quantity' should be greater than 0.
 order-items-quantity.max-value=There is not enough product in stock. Please reduce the quantity.
+order-from.empty=Field 'from' must be provided.
+order-to.empty=Field 'to' must be provided.
+order-to.invalid=Field 'to' must greater than the value provided in the field 'from'.
